test/fixtures/public/fail/semantic/arr_index_not_int.jmm
/*  REASON:
    Array indices must be integer.
*/

class T {
    public static void main(String[] s) { 
        int[] a;
        int c;
        // This is valid in Java
        a = new int[0];
        c = a[true];
        
    }
}
